--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
       <button id="startButton">Start</button>
       <button id="retryButton">Retry</button>
     </div>
-    <script type="module" src="js/game.js"></script>
+    <script type="module" src="js/core/game.js"></script>
   </body>
 </html>
